fix(list): make secondary items static
* The secondary items always had an absolute position, which causes issues with overflowing.
* This commit refactors the list to make the secondary items static.
* Fixes multiple secondary padding (as in specs - consistent)
* Fixes Proxy Scan for secondary items container
* Improved tests for the list component (more clear and more safe)

Fixes #7500. Fixes #2759.

--- a/src/components/list/demoListControls/style.css
+++ b/src/components/list/demoListControls/style.css
@@ -15,8 +15,3 @@ md-list-item ._md-list-item-inner > ._md-list-item-inner > p {
     -ms-user-select: none; /* IE 10+ */
     user-select: none; /* Likely future */
 }
-
-/* Add some right padding so that the text doesn't overlap the buttons */
-.secondary-button-padding p {
-    padding-right: 100px;
-}
